--- a/res/layout/fragment_three.xml
+++ b/res/layout/fragment_three.xml
@@ -13,6 +13,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
+        android:id="@+id/fragmentThreeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="third button" />
